--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "next": "13.4.5",
     "postcss": "8.4.24",
