--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.0.1",
     "antd": "^5.6.1",
     "autoprefixer": "10.4.14",
     "next": "13.4.5",
@@ -16,6 +17,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "smooth-scrollbar": "^8.8.4",
     "tailwindcss": "3.3.2"
   },
   "devDependencies": {
